[2단계 - JDBC 라이브러리 구현하기] 조조(조은별) 미션 제출합니다. (#658)
* docs: 2단계 기능 목록 추가

* refactor: update, insert 메서드 추출

* refactor: update, insert 클래스 추출

* refactor: 템플릿 메서드 패턴 적용

* refactor: 도메인 의존도 제거

* refactor: select 클래스 추출

* refactor: 템플릿 메서드 패턴 적용

* refactor: 불필요한 mapRow 메서드 제거

* refactor: 커스텀 Exception 추가

* refactor: RowMapper 인터페이스 제네릭으로 변경

* refactor: PreparedStatementSetter 인터페이스 람다로 구현

* refactor: UserDaoImpl에서 JdbcTemplate를 조합으로 사용

* refactor: User 매핑 중복 제거

* refactor: JdbcTemplate 관련 클래스 jdbc 모듈로 이동

* refactor: ResultSet에서 인덱스로 가져오도록 수정

* refactor: UserController에서 UserService 구현체 변경

* test: 잘못된 sql 구문 수정

* test: JdbcTemplate 테스트 추가

* refactor: PreparedStatementSetter 대신 가변인자 사용

* refactor: JdbcTemplate query() Optional 반환하도록 수정

* refactor: 템플릿 콜백 패턴 적용

* refactor: 함수형 인터페이스 어노테이션 추가

* feat: setParams 검증 로직 추가

* refactor: query(), queryForObject() 중복 코드 제거

* test: 개행 제거