@@ -3,17 +3,14 @@ package com.interface21.jdbc.core;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.junit.jupiter.api.Assertions.assertAll;
-import static org.mockito.ArgumentMatchers.anyInt;
-import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import com.interface21.dao.DataAccessException;
 import java.sql.Connection;
-import java.sql.ParameterMetaData;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.SQLException;
@@ -23,13 +20,12 @@ import javax.sql.DataSource;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-class JdbcTemplateTest {
+class LegacyJdbcTemplateTest {
 
     private Connection conn;
     private PreparedStatement pstmt;
     private ResultSet rs;
-    private JdbcTemplate jdbcTemplate;
-    private ParameterMetaData parameterMetaData;
+    private LegacyJdbcTemplate legacyJdbcTemplate;
 
     @BeforeEach
     void setUp() throws SQLException {
@@ -37,23 +33,19 @@ class JdbcTemplateTest {
         conn = mock(Connection.class);
         pstmt = mock(PreparedStatement.class);
         rs = mock(ResultSet.class);
-        parameterMetaData = mock(ParameterMetaData.class);
 
         when(dataSource.getConnection()).thenReturn(conn);
-        when(conn.prepareStatement(anyString())).thenReturn(pstmt);
-        when(pstmt.getParameterMetaData()).thenReturn(parameterMetaData);
+        when(conn.prepareStatement(any())).thenReturn(pstmt);
 
-        jdbcTemplate = new JdbcTemplate(dataSource);
+        legacyJdbcTemplate = new LegacyJdbcTemplate(dataSource);
     }
 
     @Test
-    void 데이터_생성_성공() throws SQLException {
+    void 데이터_생성_성공() {
         TestUser user = new TestUser("jojo", "1234");
         String sql = "insert into test-user (account, password) values (?, ?)";
 
-        when(parameterMetaData.getParameterCount()).thenReturn(2);
-
-        jdbcTemplate.update(sql, user.getAccount(), user.getPassword());
+        legacyJdbcTemplate.executeUpdate(sql, user.getAccount(), user.getPassword());
 
         assertAll(
                 () -> verify(pstmt).setObject(1, user.getAccount()),
@@ -65,17 +57,18 @@ class JdbcTemplateTest {
     }
 
     @Test
-    void 데이터_생성시_파라미터_바인딩_예외_발생() throws SQLException {
+    void 데이터_생성_예외_발생() throws SQLException {
         TestUser user = new TestUser("jojo", "1234");
         String sql = "insert into test-user (account, password) values (?, ?)";
 
-        when(parameterMetaData.getParameterCount()).thenReturn(3);
+        when(pstmt.executeUpdate()).thenThrow(SQLException.class);
 
         assertAll(
-                () -> assertThatThrownBy(() -> jdbcTemplate.update(sql, user.getAccount(), user.getPassword()))
+                () -> assertThatThrownBy(() -> legacyJdbcTemplate.executeUpdate(sql, user.getAccount(), user.getPassword()))
                         .isInstanceOf(DataAccessException.class),
-                () -> verify(pstmt, never()).setObject(anyInt(), anyString()),
-                () -> verify(pstmt, never()).executeUpdate(),
+                () -> verify(pstmt).setObject(1, user.getAccount()),
+                () -> verify(pstmt).setObject(2, user.getPassword()),
+                () -> verify(pstmt, times(1)).executeUpdate(),
                 () -> verify(pstmt, times(1)).close(),
                 () -> verify(conn, times(1)).close()
         );
@@ -86,18 +79,18 @@ class JdbcTemplateTest {
         TestUser user = new TestUser("jojo", "1234");
         String sql = "select id, account, password from users where account = ?";
 
-        when(parameterMetaData.getParameterCount()).thenReturn(1);
         when(pstmt.executeQuery()).thenReturn(rs);
-        when(rs.next()).thenReturn(true, false);
+        when(rs.next()).thenReturn(true);
         when(rs.getLong("id")).thenReturn(1L);
         when(rs.getString("account")).thenReturn("jojo");
         when(rs.getString("password")).thenReturn("1234");
 
-        Optional<TestUser> actual = jdbcTemplate.queryForObject(sql, this::createTestUser, user.getAccount());
+        Optional<TestUser> actual = legacyJdbcTemplate.executeQueryWithSingleData(sql, this::generateUser,
+                user.getAccount());
 
         assertAll(
-                () -> assertThat(actual).isPresent()
-                        .get().extracting(TestUser::getAccount).isEqualTo(user.getAccount()),
+                () -> assertThat(actual).isPresent(),
+                () -> assertThat(actual.get().getAccount()).isEqualTo(user.getAccount()),
                 () -> verify(pstmt).setObject(1, user.getAccount()),
                 () -> verify(pstmt, times(1)).executeQuery(),
                 () -> verify(pstmt, times(1)).close(),
@@ -111,14 +104,13 @@ class JdbcTemplateTest {
         TestUser user = new TestUser("jojo", "1234");
         String sql = "select id, account, password from users where account = ?";
 
-        when(parameterMetaData.getParameterCount()).thenReturn(1);
         when(pstmt.executeQuery()).thenReturn(rs);
-        when(rs.next()).thenReturn(true, false);
+        when(rs.next()).thenReturn(true);
         when(rs.getLong("id")).thenThrow(SQLException.class);
 
         assertAll(
                 () -> assertThatThrownBy(
-                        () -> jdbcTemplate.queryForObject(sql, this::createTestUser, user.getAccount()))
+                        () -> legacyJdbcTemplate.executeQueryWithSingleData(sql, this::generateUser, user.getAccount()))
                         .isInstanceOf(DataAccessException.class),
                 () -> verify(pstmt).setObject(1, user.getAccount()),
                 () -> verify(pstmt, times(1)).executeQuery(),
@@ -133,11 +125,11 @@ class JdbcTemplateTest {
         TestUser user = new TestUser("jojo", "1234");
         String sql = "select id, account, password from users where account = ?";
 
-        when(parameterMetaData.getParameterCount()).thenReturn(1);
         when(pstmt.executeQuery()).thenReturn(rs);
         when(rs.next()).thenReturn(false);
 
-        Optional<TestUser> actual = jdbcTemplate.queryForObject(sql, this::createTestUser, user.getAccount());
+        Optional<TestUser> actual = legacyJdbcTemplate.executeQueryWithSingleData(sql, this::generateUser,
+                user.getAccount());
 
         assertAll(
                 () -> assertThat(actual).isEmpty(),
@@ -153,19 +145,18 @@ class JdbcTemplateTest {
     void 복수_데이터_조회_성공() throws SQLException {
         String sql = "select id, account, password from users";
 
-        when(parameterMetaData.getParameterCount()).thenReturn(0);
         when(pstmt.executeQuery()).thenReturn(rs);
         when(rs.next()).thenReturn(true, true, false);
         when(rs.getLong("id")).thenReturn(1L, 2L);
         when(rs.getString("account")).thenReturn("jojo", "cutehuman");
         when(rs.getString("password")).thenReturn("jojo1234", "cutehuman1234");
 
-        List<TestUser> actual = jdbcTemplate.query(sql, this::createTestUser);
+        List<TestUser> actual = legacyJdbcTemplate.executeQueryWithMultiData(sql, this::generateUser);
 
         assertAll(
                 () -> assertThat(actual).hasSize(2),
-                () -> assertThat(actual.getFirst().getAccount()).isEqualTo("jojo"),
-                () -> assertThat(actual.getLast().getAccount()).isEqualTo("cutehuman"),
+                () -> assertThat(actual.get(0).getAccount()).isEqualTo("jojo"),
+                () -> assertThat(actual.get(1).getAccount()).isEqualTo("cutehuman"),
                 () -> verify(pstmt, times(1)).executeQuery(),
                 () -> verify(pstmt, times(1)).close(),
                 () -> verify(conn, times(1)).close(),
@@ -177,12 +168,11 @@ class JdbcTemplateTest {
     void 복수_데이터_조회_에러_발생() throws SQLException {
         String sql = "select id, account, password from users";
 
-        when(parameterMetaData.getParameterCount()).thenReturn(0);
         when(pstmt.executeQuery()).thenReturn(rs);
         when(rs.next()).thenThrow(SQLException.class);
 
         assertAll(
-                () -> assertThatThrownBy(() -> jdbcTemplate.query(sql, this::createTestUser))
+                () -> assertThatThrownBy(() -> legacyJdbcTemplate.executeQueryWithMultiData(sql, this::generateUser))
                         .isInstanceOf(DataAccessException.class),
                 () -> verify(pstmt, times(1)).executeQuery(),
                 () -> verify(pstmt, times(1)).close(),
@@ -195,11 +185,10 @@ class JdbcTemplateTest {
     void 복수_데이터_조회_실패() throws SQLException {
         String sql = "select id, account, password from users";
 
-        when(parameterMetaData.getParameterCount()).thenReturn(0);
         when(pstmt.executeQuery()).thenReturn(rs);
         when(rs.next()).thenReturn(false);
 
-        List<TestUser> actual = jdbcTemplate.query(sql, this::createTestUser);
+        List<TestUser> actual = legacyJdbcTemplate.executeQueryWithMultiData(sql, this::generateUser);
 
         assertAll(
                 () -> assertThat(actual).isEmpty(),
@@ -210,12 +199,16 @@ class JdbcTemplateTest {
         );
     }
 
-    private TestUser createTestUser(ResultSet rs) throws SQLException {
-        return new TestUser(
-                rs.getLong("id"),
-                rs.getString("account"),
-                rs.getString("password")
-        );
+    private TestUser generateUser(ResultSet rs) {
+        try {
+            return new TestUser(
+                    rs.getLong("id"),
+                    rs.getString("account"),
+                    rs.getString("password")
+            );
+        } catch (SQLException e) {
+            throw new DataAccessException(e);
+        }
     }
 
     static class TestUser {
